tests/fixtures/invalid/missing-partition-key.bprint
{
  "schemaVersion": "v1",
  "namespace": "acme.orders",
  "description": "Order missing partition key",
  "entity": {
    "primaryKey": {},
    "fields": [
      { "name": "orderId", "type": "string", "required": true }
    ]
  }
}
